# teco

./: .gitignore  .travis.yml  .travis.yml-no-not-now  0015.travis.yml  Makefile.am  NEWS  NEWS.in  README.md  README.org  TECO.INI  bootstrap  configure.ac  guix-git-fetch.scm.in  index.html  teco-0.0.73-6474.deb  tecoc  what_about_this
129/teco/: 0.tes
225/: 0.0  0.tes  0000.0  0001.0  0002.0  0env  1env  2env  5env  6env  7env  8env  DOWNLOAD.sh  PACKAGE.sh  TARBALL.sh  TAR_SUFFIX.sh  URL_PREFIX.sh  WGET_OPTIONS.sh  index.html.in
226/: 0000.t
241/129/: mung
DEBIAN/: control
Fn/: 00-NEWS-version  00-changelog  00-control  00-describe-this  00-distclean  00-git-clean  00-hithere-abstract  00-packages-here  00-release-download  00-source-format  00-tag-to-release  00-what-parameters  002_  00_  01_  0_  1_  2_  _  a0_  a1_  a2_  a3_  a4_  a5_  a9_  a__  bzless-guix-build-log-file  c  c_  c__  clone-hithere-release-v0.0  down  git-fetch  guix-sha256-github  m  n  package-concrete  packages-here  tag-to-deploy  (+3 more)
a/: 002  clpars.tes  init0.tes
archive-obsolete/debian-0.0.93/: manpage.1.ex  preinst.ex
archive/debian-0.0.93/: watch.ex
archive/debian.in/source/: format.in
archive/debian.once/: changelog
ci/: 0015.travis.yml  develop.travis.yml
ci.in/: 0010.travis.yml  autoconf-make  develop  develop.travis.yml  hithere.0007.travis.yml  init  release-v0.0  teco-macros
debian/: README.Debian  changelog  control  control.bak  copyright  files  manpage.sgml.ex  postinst.ex  postrm.ex  rules
debian-0.0.93/: README.source  manpage.xml.ex  menu.ex  prerm.ex
debian.in/: changelog.in  control.in
doc/: tecoc.rnh
doc/Fn/: 00-wget-runoff.7  000_  004_  005_  009_
guix/: git-fetch.scm.in  tecoc.scm.in
in/: copyright
in/Fn/: 00-dpkg-deb-build  00-wget-changelog-debianutils  00-wget-control-debianutils  00-wget-control-example  00-wget-dpkg-configure-ac  00-wget-dpkg-makefile-am  00-wget-postinst-debianutils  00-wget-postrm-debianutils  00-wget-rules  00-wget-rules-debianutils
lib/: lowcase.tec
lp/: id_rsa_launchpad.fingerprint  id_rsa_launchpad.pub  lp.txt
m4/: teco.m4
modules/: format.tes
sbx/: a.tec  b.TEC  c  d.TEC  mv.tcl
scripts/: 06-guix-sha256  gitlog-to-changelog  news-just-in  official-tar
snippets/: 00-setup  1.1  2.2
src/: Makefile-linux  Makefile-linux.2  Makefile-linux.20180828  Makefile-linux.n  Makefile-linux.new  Makefile.am  amodem.c  baksrc.c  bldstr.c  chmacs.h  clenup.c  clpars.h  clpars.tec  clpars.tes  cmatch.c  dccc.com  dchars.h  deferr.h  defext.h  docjr.c  doeves.c  doflag.c  doit.com  dscren.h  echoit.c  err.c  exea.c  exeats.c  exeb.c  exebar.c  exebsl.c  exec.c  execcc.c  execln.c  execom.c  execrt.c  execst.c  execta.c  exectc.c  exectd.c  (+153 more)
src/Fn/: 00-make-linux  00-make-tee  00-makedep0  001_  003_
src/tecoc-146/: .tecorc
t/: 0000-who-is-this  0000.0  0000.1  0000.t  0001-who-is-this  0001.t  0002.0  0002.t  0002.t.bak  0003.t  0004.t  0006.t  0007.t  0008.t  3env  4env  DOWNLOAD.sh  SOURCE.sh  TAG_PREFIX.sh  TARBALL.sh  URL_PREFIX.sh  VERSION.sh  dist.deb  test.text
t.in/: 0000.t-expect  0000.t-make  0000.t-make-no-yet  0000.t-tclsh  0001.t-catch  0001.t-catch-not  1.1  tmux-03.e
teco-doc/: patch4036.txt  tech.txt  v39.txt  v4026.txt  v4038.txt
testsrc/: 0000.t  0001.t  0002.tec  0003.tec  tmux-02.e
testsrc/curses/8100/: 0  0.c
testsrc/sqlite/data/: a.db
