SUBDIRS = src
dist_doc_DATA = README.md LICENSE

ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = m4/ax_with_curses.m4
EXTRA_DIST += m4/pkg.m4
EXTRA_DIST += \
	src/chmacs.h \
	src/clpars.h \
	src/config.h \
	src/dchars.h \
	src/deferr.h \
	src/defext.h \
	src/dscren.h \
	src/tecoc.h \
	src/vrbmsg.h \
	src/zport.h
