SUBDIRS = src
dist_doc_DATA = README.md LICENSE

ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = m4/ax_with_curses.m4
EXTRA_DIST += m4/pkg.m4
EXTRA_DIST += m4/ax_require_defined.m4
EXTRA_DIST += m4/teco.m4
EXTRA_DIST += \
	src/chmacs.h \
	src/clpars.h \
	src/config.h \
	src/dchars.h \
	src/deferr.h \
	src/defext.h \
	src/dscren.h \
	src/tecoc.h \
	src/vrbmsg.h \
	src/zport.h

modulesdir = @tecomoduledir@
dist_modules_DATA = \
   src/change.tes \
   src/clpars.tes \
   src/date.tes \
   src/detab.tes \
   src/dir.tes \
   src/fmtmac.tes \
   src/format.tes \
   src/makprnt.tes \
   src/search.tes \
   src/squ.tes \
   src/tecoin.tes \
   src/teco.tes \
   src/type.tes \
   src/unsqu.tes \
   src/vtedit.tes

objectsdir = @tecoobjectdir@
dist_objects_DATA = \
   src/change.tec \
   src/clpars.tec \
   src/date.tec \
   src/detab.tec \
   src/dir.tec \
   src/fmtmac.tec \
   src/format.tec \
   src/lowcase.tec \
   src/makprnt.tec \
   src/search.tec \
   src/sewer.tec \
   src/squ.tec \
   src/sub.tec \
   src/tecv40.tec \
   src/tstbsl.tec \
   src/tstcss.tec \
   src/tstequ.tec \
   src/tsto.tec \
   src/tstpw.tec \
   src/tstqr.tec \
   src/tstsrc.tec \
   src/tst.tec \
   src/type.tec \
   src/unsqu.tec \
   src/upcase.tec \
   src/vtedit.tec
